# self_use

backend/: pyproject.toml
backend/crawler/: xxt.py
frontend/: doc.md  env.d.ts  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css  material-design-colors.css  themeUtils.ts
frontend/src/components/: BaseCard.vue  ChatMessage.vue  CourseTable.vue  DdlNews.vue  LatestNews.vue  PlatformDistribution.vue  SideBar.vue  SimpleCalendar.vue  StatisticCards.vue
frontend/src/components/chat/: ChatInput.vue  ChatMessage.vue  ChatSidebar.vue  WelcomeScreen.vue
frontend/src/components/icons/: CheckCircleIcon.vue  EmailIcon.vue  InfoCircleIcon.vue  LocationIcon.vue  PhoneIcon.vue  ShieldIcon.vue  TargetIcon.vue  index.ts
frontend/src/resource/: chat.ts  dashboard.ts  home.ts
frontend/src/resource/components/: courseTable.ts  latestNews.ts  platformDistribution.ts  sidebar.ts  statisticCards.ts
frontend/src/router/: index.ts
frontend/src/services/: dataService.ts
frontend/src/stores/: calendarStore.ts  chatStore.ts  sidebarStore.ts
frontend/src/views/: AboutView.vue  ChatView.vue  DashboardView.vue  HomeView.vue
