[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "curl-cffi>=0.10.0",
    "openai>=1.76.0",
    "pillow>=11.2.1",
    "playwright>=1.51.0",
    "requests>=2.32.3",
]
